# alg6lab

./: CMakeLists.txt  main.cpp
headers/BinTree/: BinTree.hpp
headers/Nodes/: Node.hpp  OneForwardNode.hpp  TwoForwardNode.hpp
headers/Queue/: Queue.hpp
headers/Stack/: Stack.hpp
headers/nodes/: Node.h  OneForwardNode.h  TwoForwardNode.h
headers/stack/: stack.h
src/stack/: stack.cpp
