cmake_minimum_required(VERSION 3.5.0)
project(lab06 VERSION 0.1.0 LANGUAGES C CXX)
include(CTest)
enable_testing()
include_directories(headers)
include_directories(src)
add_executable(lab06 main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
